# CrossWindow

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  circle.yml  license.md  readme.md
CMakeHelpers/: CopyToOutput.cmake  CrossWindow.plist  CrossWindowIOS.xib.in  IOS.cmake  generate_win32_files.cmake  generate_xcode_files.cmake
docs/: creation.md  design-decisions.md  design-descisions.md  dialogs-file-windows.md  displays.md  event-handling.md  graphics-apis.md  input.md  mag-integration.md  multiple-windows.md  platform-behavior.md  readme.md  window-manipulation.md
src/CrossWindow/: CrossWindow.cpp  CrossWindow.h  Macros.h
src/CrossWindow/Android/: AndroidEventQueue.cpp  AndroidEventQueue.h  AndroidWindow.cpp  AndroidWindow.h
src/CrossWindow/Cocoa/: CocoaEventQueue.h  CocoaEventQueue.mm  CocoaWindow.h  CocoaWindow.mm
src/CrossWindow/Common/: Dialogs.cpp  Dialogs.h  DialogsDesc.h  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  Init.cpp  Init.h  Macros.h  State.h  Window.cpp  Window.h  WindowDesc.cpp  WindowDesc.h
src/CrossWindow/Linux/: LinuxEventQueue.cpp  LinuxEventQueue.h  LinuxWindow.cpp  LinuxWindow.h
src/CrossWindow/MacOS/: MacOSEventQueue.h  MacOSEventQueue.mm  MacOSWindow.h  MacOSWindow.mm
src/CrossWindow/Main/: AndroidMain.cpp  CocoaMain.mm  LinuxMain.cpp  MacOSMain.mm  Main.h  NoopMain.cpp  UIKitMain.mm  UWPMain.cpp  WASMMain.cpp  WaylandMain.cpp  Win32Main.cpp  WindowsMain.cpp  XCBMain.cpp  XLibMain.cpp  iOSMain.mm  main.cpp  main.mm  mingw_loader.cpp  mingw_loader.h
src/CrossWindow/Mir/: MirEventQueue.cpp  MirWindow.cpp
src/CrossWindow/Noop/: NoopEventQueue.cpp  NoopEventQueue.h  NoopWindow.cpp  NoopWindow.h
src/CrossWindow/UIKit/: UIKitEventQueue.cpp  UIKitEventQueue.h  UIKitEventQueue.mm  UIKitWindow.h  UIKitWindow.mm
src/CrossWindow/UWP/: UWPEnventQueue.cpp  UWPEventQueue.h  UWPWindow.cpp  UWPWindow.h
src/CrossWindow/WASM/: HTMLWindow.h  WASMEventQueue.cpp  WASMEventQueue.h  WASMWindow.cpp  WASMWindow.h
src/CrossWindow/Wayland/: WaylandEventQueue.cpp  WaylandEventQueue.h  WaylandWindow.cpp  WaylandWindow.h
src/CrossWindow/Win32/: Win32Dialogs.cpp  Win32Dialogs.h  Win32EventQueue.cpp  Win32EventQueue.h  Win32Window.cpp  Win32Window.h
src/CrossWindow/Windows/: Win32EventQueue.cpp  Win32EventQueue.h  Win32Window.cpp  Win32Window.h  WinEventQueue.cpp  WinEventQueue.h  WinWindow.cpp  WinWindow.h
src/CrossWindow/XCB/: XCBEventQueue.cpp  XCBEventQueue.h  XCBWindow.cpp  XCBWindow.h
src/CrossWindow/XLib/: XLibEventQueue.cpp  XLibEventQueue.h  XLibWindow.cpp  XLibWindow.h
src/CrossWindow/iOS/: iOSEventQueue.h  iOSWindow.h  iOSWindow.mm
tests/: Creation.cpp  Events.cpp  State.cpp  XMain.cpp  main.cpp
visualstudio/: VersionInfo.h  VersionResource.rc
